--- a/package.json
+++ b/package.json
@@ -11,10 +11,11 @@
     "ecs:install-next": "npm install --save-dev decentraland-ecs@next"
   },
   "devDependencies": {
-    "decentraland-ecs": "latest"
+    "decentraland-ecs": "^6.6.6-1177154906.commit-a301403"
   },
   "dependencies": {
     "@dcl/ecs-scene-utils": "^1.6.1",
+    "@dcl/kernel": "https://sdk-team-cdn.decentraland.org/@dcl/kernel/branch/feat/skip-avatar-selection-in-preview/dcl-kernel-1.0.0-1183047959.commit-d5accd1.tgz",
     "@dcl/ui-scene-utils": "^1.7.1"
   },
   "bundleDependencies": [
