--- a/tsconfig.json
+++ b/tsconfig.json
@@ -5,10 +5,12 @@
     "strict": true,
     "paths": {
       "@dcl/ecs-scene-utils": [
-        "node_modules\\@dcl\\ecs-scene-utils\\dist\\index.d.ts"
+        "node_modules\\@dcl\\ecs-scene-utils\\dist\\index.d.ts",
+        "node_modules/@dcl/ecs-scene-utils/dist/index.d.ts"
       ],
       "@dcl/ui-scene-utils": [
-        "node_modules\\@dcl\\ui-scene-utils\\dist\\index.d.ts"
+        "node_modules\\@dcl\\ui-scene-utils\\dist\\index.d.ts",
+        "node_modules/@dcl/ui-scene-utils/dist/index.d.ts"
       ]
     },
     "baseUrl": "."
